@@ -22,6 +22,7 @@ export(downloadProjectZip)
 export(downloadXML)
 export(expandSeed)
 export(factorNAfirst)
+export(generateRScripts)
 export(getAvailableFunctions)
 export(getAvailableProjects)
 export(getBaseline)
