@@ -46,7 +46,7 @@ factorNAfirst(x)
 
 \item{format}{The file format of the saved plot, given as a string naming the function to use for saving the plot (such as bmp, jpeg, png, tiff), with \code{filename} as its first argument. Arguments fo the functions are given as \code{...}. Dimensions are defaulted to width=5000, height=3000, , resolution to 500 dpi. If \code{format} has length 0, the plot is shown in the graphics window, and not saved to file.}
 
-\item{log}{Character string giving the axes to apply log10() to.}
+\item{log}{Character string giving the axes to apply log10() to, or TRUE to indicate log="y".}
 
 \item{filetag}{A character string to append to the file name (before file extension).}
 
