@@ -571,3 +571,10 @@ Fixed bug in reportAbundance_SweptAreaTotal() where the column SpecCat was missi
 Fixed bug in imputeByAge() where no unknown ages resulted in a different output from distributeAbundance(). 
 
 Added notes about 64 bit R on Windows in the README file.
+
+Fixed bug in getNMDdata(), where serialno = c(start, end) was not interpreted as start : end, as expected from the documentation. From Rstox 1.8 on serialno is a vector of all the serialnumbers to download data from.
+
+Fixed bug in getNMDdata(), where there was no restriction on file name when multiple serialno-ranges were requested. From Rstox 1.8 on, only the first and last serialno is included in the file name, irrespective of sub intervals in serialno.
+
+Removed the main title of plotNASCDistribution(), in order to avoid diffs during automatic testing.
+
